tests/testData/graphql/validation/suppress/SuppressOnDefinition.graphql

# comment

type Query {
    a: ID
    field(arg: ID): Int
}

# noinspection GraphQLUnresolvedReference
type <error descr="\"User\" must define one or more fields"><error descr="The field type 'UnknownType' is not present when resolving type 'User'">User</error></error> {
    name: UnknownType
}

# noinspection GraphQLUnresolvedReference
query {
    a
    bcd
    field(bar: 2)
}
